kiali-3001/userassets/virualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-dev
  namespace: istio-system
spec:
  hosts:
  - foo-dev.example.com
  gateways:
  - foo-dev
  http:
  - name: foo-svc
    match:
    - uri:
        prefix: /foo
    rewrite:
      uri: "/foo"
    route:
    - destination:
        host: foo-dev.istio-system.svc.cluster.local
        port:
          number: 49000
