kiali-3001/userassets/authzpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-foo
  namespace: istio-system
spec:
  action: DENY
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
  - to:
    - operation:
        hosts:
          - "foo-dev.example.com"
        paths:
          - "/foo"
    when:
    - key: request.headers[x-token]
      notValues:
      - "fooreader"
